<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    android:background="@drawable/background"
    tools:context="com.example.jimmykudo.musicapp.NowPlaying">

    <TextView
        android:text="@string/now_playing_description"
        android:gravity="center"
        android:textAppearance="@style/description_style"
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/now_play_home"
                android:text="@string/main"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/button_txt_color"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@drawable/transparent"
                android:layout_width="0dp"
                android:layout_margin="7dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/now_play_songList"
                android:text="@string/song_list"
                android:layout_weight="1"
                android:textColor="@color/button_txt_color"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@drawable/transparent"
                android:layout_margin="7dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/now_play_playPause"
            android:text="@string/play_pause"
            android:textStyle="bold"
            android:textColor="@color/button_txt_color"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:background="@drawable/transparent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
